# ls-cdp

./: .flake8  .gitignore  README.md  buildspec.yml  check_and_fix.sh  docker-compose-dev-arm.yml  docker-compose-dev.yml  docker-compose-test.yml  pyproject.toml  pytest.ini  run_check.sh  run_pytest.sh
.github/workflows/: python-app.yml
doc/: data.md  message.md  s3.md
doc/docker-for-dev/: Dockerfile  docker-compose.yml
doc/docker-for-dev/arm/: Dockerfile
doc/docker-for-dev/shell/: run_sshd.sh
doc/docker-for-dev/ssh_file/: ssh_host_ecdsa_key  ssh_host_ecdsa_key.pub  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub  sshd_config
doc/docker-for-test/: Dockerfile  docker-compose.yml
shell/: pre-commit.sh  run_check_bandit.sh  run_check_flake8.sh  run_check_mypy.sh  run_format.sh  run_pytest.sh
shell/dev/: run_check_bandit.sh  run_check_flake8.sh  run_check_mypy.sh  run_format.sh  run_pytest.sh
shell/test/: run_check_bandit.sh  run_check_flake8.sh  run_check_mypy.sh  run_pytest.sh
src/main/cdp/common/: base.py  config.py  exceptions.py  options.py
src/main/cdp/etls/: Etl001.py  etl001.py
src/main/cdp/utils/: glue_utils.py  log_utils.py  redshift_utils.py  s3_utils.py  secretmanager_utils.py  sys_utils.py
src/main/resources/common/: message.ini
src/tests/cdp/: conftest.py
src/tests/cdp/common/: test_base.py  test_config.py  test_exceptions.py
src/tests/cdp/etls/: test_etl001.py
src/tests/cdp/utils/: test_glue_utils.py  test_s3_utils.py  test_secretmanager_utils.py  (+2 more)
tools/: create_job.py  test_s3.py
(+24 files in other folders)
